--- a/wistia-test-pr.html
+++ b/wistia-test-pr.html
@@ -13,5 +13,6 @@
     </div>
 
     <script src="https://fast.wistia.com/assets/external/E-v1.js" async></script>
+    <p><a href="#wistia_djvvz13kcz?time=1:30">Test a bookmark link</a></p>
   </body>
 </html>
