--- a/wistia-test-standard.html
+++ b/wistia-test-standard.html
@@ -17,5 +17,7 @@
         </div>
       </div>
     </div>
+    
+    <p><a href="#wistia_djvvz13kcz?time=90">Test a bookmark link</a></p>
   </body>
 </html>
