--- a/wistia-test-pr.html
+++ b/wistia-test-pr.html
@@ -8,8 +8,8 @@
     <script src="https://fast.wistia.com/assets/external/E-v1.js" async></script>
 
     <div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;">
-      <div className="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width: 100%">
-          <iframe src="https://fast.wistia.net/embed/iframe/djvvz13kcz?videoFoam=true" allowTransparency="true" frameBorder="0" scrolling="no" className="wistia_embed" name="wistia_embed" allowFullScreen mozallowfullscreen webkitallowfullscreen oallowfullscreen msallowfullscreen width="100%" height="100%">
+      <div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width: 100%">
+          <iframe src="https://fast.wistia.net/embed/iframe/djvvz13kcz?videoFoam=true" allowTransparency="true" frameBorder="0" scrolling="no" class="wistia_embed" name="wistia_embed" allowFullScreen style="height:100%; width:100%">
         </div>
     </div>
     
