--- a/wistia-test-pr.html
+++ b/wistia-test-pr.html
@@ -2,14 +2,15 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Wisita test - PR embed</title>
   </head>
   <body>
     <script src="https://fast.wistia.com/assets/external/E-v1.js" async></script>
 
     <div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;">
       <div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width: 100%">
-          <iframe src="https://fast.wistia.net/embed/iframe/djvvz13kcz?videoFoam=true" allowTransparency="true" frameBorder="0" scrolling="no" class="wistia_embed" name="wistia_embed" allowFullScreen style="height:100%; width:100%">
+          <iframe src="https://fast.wistia.net/embed/iframe/djvvz13kcz?videoFoam=true" class="wistia_embed" name="wistia_embed" 
+                  allowFullScreen style="height:100%; width:100%"></iframe>
         </div>
     </div>
     
